<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imgFotoCapturada"
            android:layout_width="163dp"
            android:layout_height="150dp"
            android:background="@android:drawable/ic_menu_crop"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblLuga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cargar  Foto Desde"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnDesdeArchivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:drawable/ic_menu_gallery" />

            <Button
                android:id="@+id/btnDesdeCamara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_camera" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txtDescripcionEmergencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:hint="@string/lblHintDescripcion"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/lblFechaHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblServicio"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/spnServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/lblCompartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="0"
            android:text="@string/lblCompartir"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_facebook" />

            <CheckBox
                android:id="@+id/chkFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblFacebook"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:src="@android:drawable/ic_dialog_email" />

            <CheckBox
                android:id="@+id/chkSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSMS"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAceptarNuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_weight="0"
            android:background="@drawable/ic_subir"
            android:height="@dimen/abc_action_button_min_width"
            android:width="@dimen/abc_action_bar_progress_bar_size" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="125dp"
            android:layout_weight="0.63"
            android:gravity="center"
            android:text="@string/lblenviar"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="bold"
            android:typeface="normal" />
    </LinearLayout>

</LinearLayout>